<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_portfolio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabiofilho.appportfolio.PortfolioActivity"
    android:background="#8e9afa">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="16dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_activity_text_my_nanodegree_apps"
                android:layout_marginBottom="20dp"
                android:textSize="25sp"
                android:textColor="#000"
                android:gravity="center_horizontal"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_activity_button_popular_movies"
                android:onClick="onClickPopularMoviesButton"
                style="@style/DefaultButtonPortfolioActivity" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_activity_button_stock_hawk"
                android:onClick="onClickStockHawkButton"
                style="@style/DefaultButtonPortfolioActivity" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_activity_button_build_it_bigger"
                android:onClick="onClickBuiltItBiggerButton"
                style="@style/DefaultButtonPortfolioActivity" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_activity_button_make_app_material"
                android:onClick="onClickMakeAppMaterialButton"
                style="@style/DefaultButtonPortfolioActivity" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_activity_button_go_ubiquitous"
                android:onClick="onClickGoUbiquitousButton"
                style="@style/DefaultButtonPortfolioActivity" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_activity_button_capstone_my_app"
                android:onClick="onClickCapstoneMyAppButton"
                android:background="?android:attr/colorActivatedHighlight"
                style="@style/DefaultButtonPortfolioActivity" />



        </LinearLayout>



    </ScrollView>
</RelativeLayout>
